examples/test/testpolicy864.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy864
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key37: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value10
          key13: value43
      podSelector:
        matchLabels:
          key40: value19
          key0: value45
          key23: value48
